# fill_insdb_with_planck_rimo

./: .flake8  .gitignore  LICENSE.md  README.md  common.py  create_mock_files_from_PLA.py  create_planck2013_release.py  create_planck2015_release.py  create_planck2018_release.py  create_planck2021_release.py  create_tree.py  httpinsdb.py  pyproject.toml  tox.ini
format_specifications/: hfi_detector_data.txt  lfi_data_sampling.txt  lfi_detector_data.txt  rimo.txt
release_documents/: planck2015.txt  planck2021.txt
